Create home page, add links to recipes, add photos
This serves as the home page where links are added to various recipe pages containing pictures and descriptions as well as a link back to the home page.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/3-layer-lasagna.html" target="_blank" rel="noopener noreferrer">3-layer-lasagna</a>
-</body>
+    <ul>
+        <li>
+            <a href="./recipes/3-layer-lasagna.html" target="_blank" rel="noopener noreferrer">3-layer-lasagna</a>
+        </li>
+        <li>
+            <a href="./recipes/Onigiri.html" target="_blank" rel="noopener noreferrer">Onigiri Yaki</a>
+        </li>
+        <li>
+            <a href="./recipes/Flapperjack.html" target="_blank" rel="noopener noreferrer">Flapperjack</a>
+        </li>
+    </ul>
+    
+    </body>
 </html>
