Add styling using basic css
Add button element to 'a' linked to index.html.

--- a/recipes/3-layer-lasagna.html
+++ b/recipes/3-layer-lasagna.html
@@ -3,21 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Document</title>
+    <title>3 Layer Lasagna</title> 
+    <link rel="stylesheet" href="../styles.css">
+
 </head>
 <body>
-    <a href="../index.html">Home</a>
-    <h1>3-layer-lasagna</h1>
-    <img src="https://www.allrecipes.com/thmb/--D4QjJ8RwHQmk4fGOKe-f7OHEA=/282x188/filters:no_upscale():max_bytes(150000):strip_icc()/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg" alt="Photo of 3-layer-lasagna" height="250" width="250">
-    <h2>How to make hearty 3-layer-lasagna</h2>
-    <p>
+
+    <button class="home">
+        <a class="home" href="../index.html">Home</a>
+    </button>
+
+    <h1>3 Layer Lasagna</h1>
+       <img src="https://www.allrecipes.com/thmb/--D4QjJ8RwHQmk4fGOKe-f7OHEA=/282x188/filters:no_upscale():max_bytes(150000):strip_icc()/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg" alt="Photo of 3-layer-lasagna" height="auto" width="250">
+    
+       <h2>How to make hearty 3 Layer Lasagna</h2>
+   
+       <p>
     This is a special recipe a very close friend taught me how to make and best enjoyed hot out of the oven or chilled overnight in the fridge. 
     Imagine a decedent creamy mac and cheese and a spicey spaghetti bolognese had a love child in your mouth. 
-    </p>
-    <p>
+       </p>
+       <p>
         The secret to this amazing dish is all in the cheese sauce, which needs to be consistently stirred over a low heat 
         until it starts to become thicker, before adding the cheese and spices.
-    </p> 
+       </p> 
 
     <h2>Ingredients</h2>
     
